# summit-website

./: .gitignore  CNAME  Makefile  Sponsoring.html  about.html  accommodation.html  accomodation.html  agenda.html  cfp.html  conference.html  exhibition.html  index.html  posters.html  program-new.html  program.html  registration.html  side-events.html  speakers.html  sponsoring.html  twg-meetings.html  venue.html
.github/workflows/: hakyll.yml
assets/css/: font.css  summit2023.css  summit2024.css  summit2025.css
css/: banner.css  fonts.css  menu.css  nav.css  organizers.css  root.css  sponsor-boxes.css  table-week.css
hakyll/: website.cabal
hakyll/src/: site.hs
site.src/: about.html  contact.html  index.html  portfolio.html  pricing.html  services.html
site.src/css/: banner.css  menu.css  nav.css  organizers.css  root.css  sponsor-boxes.css  style.css  table-colors.css  table-week.css
site.src/dynamic/: Makefile
site.src/pages/: Sponsoring.md  about.md  accommodation.md  accomodation.md  agenda.md  cfp.md  conference.md  exhibition.md  index.md  posters.md  program-new.md  program.md  registration.md  side-events.md  speakers.md  sponsoring.md  twg-meetings.md  venue.md
site.src/templates/: default.html
summit/2023/: about.html  accommodation.html  cfp.html  conference.html  index.html  posters.html  program-new.html  registration.html  side-events.html  sponsoring.html  twg-meetings.html  venue.html
summit/2024/: about.html  cfp.html  conference.html  demoday.html  index.html  posters.html  registration.html  sideevents.html  sponsoring.html  (+2 more)
(+50 files in other folders)
